postgres/manifests/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: postgres-db
  namespace: exercises
spec:
  replicas: 1
  selector:
    matchLabels:
      app: postgres-db
  template:
    metadata:
      labels:
        app: postgres-db
    spec:
      volumes:
        - name: postgres-data
          persistentVolumeClaim:
            claimName: postgres-data-claim3
      containers:
        - name: db
          image: postgres
          volumeMounts: 
          - name: postgres-data
            mountPath: /var/lib/postgresql
