postgres/manifests/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: postgres-svc
  namespace: exercises
spec:
  type: ClusterIP
  selector:
    app: postgres-db
  ports:
    - port: 2347
      protocol: TCP
      targetPort: 5432
